[package]
name = "whodis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
color-eyre = "0.6.5"
futures = "0.3.31"
hickory-client = { version = "0.25.2", features = ["dnssec-ring"] }
local-ip-address = "0.6.8"
rand = "0.9.2"
rustls-pki-types = { version = "1.13.2", features = ["std"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
